best seller item done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get: ^4.6.6
   flutter_bloc: ^8.1.6
   font_awesome_flutter:
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
