--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  get: ^4.6.6
   flutter_bloc: ^8.1.6
   font_awesome_flutter:
   google_fonts: ^6.2.1
+  go_router: ^14.3.0
 
 dev_dependencies:
   flutter_test:
