--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   font_awesome_flutter:
   google_fonts: ^6.2.1
   go_router: ^14.3.0
+  equatable: 
 
 dev_dependencies:
   flutter_test:
