--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   google_fonts: ^6.2.1
   go_router: ^14.3.0
   equatable: 
+  dartz: ^0.10.1
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
